# rust-atomic64

./: Cargo.toml  README.md
src/: atomic64.rs  lib.rs
